cmake_minimum_required(VERSION 2.8)

add_definitions(-DSIMICS)

add_subdirectory(libapp)
#add_subdirectory(libcore)
#add_subdirectory(libemul)
#add_subdirectory(libll)
#add_subdirectory(libmem)
#add_subdirectory(libmint)
#add_subdirectory(libnet)
#add_subdirectory(libpint)
#add_subdirectory(libpower)
#add_subdirectory(librst)
#add_subdirectory(libsescspot)
#add_subdirectory(libsesctherm)
#add_subdirectory(libsmp)
#add_subdirectory(libsuc)
#add_subdirectory(libsuperlu)
#add_subdirectory(libtm)
#add_subdirectory(libvmem)
#add_subdirectory(misc)
